Stop ignoring compression options when dropping files

Compression options set by CreateDialog were only taken into account
when adding files through the AddDialog, but not when adding files by
dropping them from Dolphin.

We fix this issue by moving the init of compression options in a new
dedicated function, which we can call also when dropping files.

While at it, this change allows us to simplify the `droppedFiles()`
signal emitted by ArchiveModel.

BUG: 396579
FIXED-IN: 18.07.80